Исправления и доработки